--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body class="elbody">
 <!-------------------EL HEADER----------------------------------------->
 <header>
-    <nav class="navbar-gr navbar-inverse" role="navigation" style="background:rgba(65,61,170,0.5); color:#fff;">
+    <nav class="navbar-gr" role="navigation">
         <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="navbar-header ">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                                 data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span><a id="btn_initial"><img src="images/image_20170130_072429.png" alt="" class="img-responsive logo" style="height:50px; width:50px;"></a></span>
+                <span class="name"><a id="btn_initial"><h4>Grace.F</h4></a></span>
             </div>
             <div class="navbar-collapse collapse nav_grace" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
@@ -39,6 +39,9 @@
 <canvas id="canvas"></canvas>
 <!----------------HOME--------------------------------------------------->
 <section id="welcome view-start initial" class="visible  welcome">
+    <div class="img_content">
+        <img src="images/logo2.png" alt="" class="logo_central">
+    </div>
 	<div class="content">
 	<div class="img"></div>
 		<div class="container">
@@ -224,7 +227,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2 col-xs-2 control-label">Nombre</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Nombre">
+                                    <input type="name" class="form-control" id="inputPassword3" placeholder="Nombre">
                                 </div>
                             </div>
                             <div class="form-group">
