--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body class="elbody">
 <!-------------------EL HEADER----------------------------------------->
@@ -267,8 +268,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<!--<script src="js/projects.js"></script>--> 
+<script src="js/main.js"></script> 
 <script src="js/milkyway.js"></script>   
 </body>
 </html>
