--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h2 class="animated fadeInLeft"> Sobre  Mí</h2>
                     <hr class="hor animated fadeInRight">    
                     <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
-                    <p class="animated fadeInLeft" style="font-style:italic; color:rgb(141,208,185);font-weight:bold;font-size:16px;">¿Qué me interesa?</p>
+                    <p class="animated fadeInLeft" style="font-style:italic; color:rgb(0,220,183);font-weight:bold;font-size:16px;">¿Qué me interesa?</p>
                     <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovacion de páginas web.
                     Ademas del desarrollo frontend, me encantaria participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
                     </p>
@@ -228,14 +228,16 @@
                             <div class="form-group">
                                 <label class="col-sm-2 col-xs-2 control-label">Nombre</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <input type="name" class="form-control" id="inputPassword3" placeholder="Nombre">
+                                    <input type="name" class="form-control" id="name" placeholder="Nombre">
+                                    <span id="avise"></span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label  class="col-sm-2 col-xs-2 control-label">Email</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                    <input type="email" class="form-control" id="email" placeholder="Email">
                                 </div>
+                                <span id="avisemail"></span>
                             </div>
                             <div class="form-group">
                                 <label  class="col-sm-2 col-xs-2 control-label">Mensaje</label>
@@ -243,6 +245,7 @@
                                     <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
                                 </div>
                             </div>
+                            <button class="btn" id="btn_send">Enviar</button>
                         </form> 
                     </div>
                 </div> 
@@ -262,14 +265,15 @@
 
 <!----------------------SCRIPT-------------------------------->
 <script
-  src="https://code.jquery.com/jquery-1.12.4.min.js"
-  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="js/jquery.js"></script> 
+<script src="js/validating.js"></script>
+<script src="js/jquery.js"></script>  
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script> 
-<script src="js/milkyway.js"></script>   
+    <script src="js/milkyway.js"></script>  
 </body>
 </html>
 
