adding change head

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
@@ -24,14 +25,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="name"><a id="btn_initial"><h4>Grace.F</h4></a></span>
+                <a id="btn_initial" class="name"><h3>G.C</h3></a>
             </div>
             <div class="navbar-collapse collapse nav_grace" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="btn_about_me">Sobre Mi</a></li>
+                    <li><a id="btn_about_me">Sobre Mí</a></li>
                     <li><a id="btn_skills">Habilidades</a></li>
                     <li><a id="btn_project">Trabajos</a></li>
-                    <li><a id="btn_contact_me">Contactame</a></li>
+                    <li><a id="btn_contact_me">Contáctame</a></li>
                 </ul>
             </div>
         </div>
@@ -70,10 +71,9 @@
                     <hr class="hor animated fadeInRight">    
                     <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
                     <p class="animated fadeInLeft" style="font-style:italic; color:rgb(0,220,183);font-weight:bold;font-size:16px;">¿Qué me interesa?</p>
-                    <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovacion de páginas web.
-                    Ademas del desarrollo frontend, me encantaria participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
+                    <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovación de páginas web.
+                    Además del desarrollo frontend, me encantaría participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
                     </p>
-                    <p class="animated fadeInLeft">A la par con mi carrera de Turismo y mi curiosidad por otras culturas,  pude estudiar 4 idiomas: Ingles, Japones, Chino  y Portugues.</p>
                     <!------------LIKES------------->    
                     <div class="text-center likes_about_me">
                         <ul class="list-inline list-unstyled">
@@ -111,8 +111,8 @@
                         <hr class="hor animated fadeInRight">
                         <div class="logo_programs text-center">
                             <h3>Web Developer</h3>
-                            <div class="img_logo_skills -html">
-                                <img src="images/HTML5_1Color_White.png" alt="html-image" class="img-responsive">
+                            <div class="img_logo_skills -css">
+                                <img src="images/HTML5_1Color_White.png" alt="" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -css">
                                 <img src="images/css-white.png" alt="" class="img-responsive">
@@ -139,9 +139,9 @@
                         <div class="idiomas_skills text-center">
                            <h3 id="name">Idiomas</h3>
                             <div><span>Inglés Avanzado</span><img src="images/statue_1.png" alt="" class="img-responsive"> </div>
-                            <div> <span>Mandarin Intermedio <img src="images/mandarin-2.1.png" alt="" class="img-responsive"></span></div>
+                            <div> <span>Mandarín Intermedio <img src="images/mandarin-2.1.png" alt="" class="img-responsive"></span></div>
                             <div><span>Japones <br>Básico <img src="images/jp-3.png" alt="" class="img-responsive"></span></div>
-                            <div> <span>Portugues Básico<img src="images/br-4.png" alt="" class="img-responsive"></span></div>
+                            <div> <span>Portugués Básico<img src="images/br-4.png" alt="" class="img-responsive"></span></div>
                         </div> 
                     </div>  
             </div>
@@ -161,8 +161,8 @@
                             <div class="info_enlace">
                                <div>
                                    <h3>User Testing</h3>
-                                <button class="btn"> <a href="https://graceft.github.io/User-Testing2/">View</a></button>
-                                <button class="btn"> <a href="https://github.com/GraceFT/User-Testing2"><i class="fa fa-github"></i></a></button>
+                                <a href="https://graceft.github.io/User-Testing2/"><button class="btn">View</button></a>
+                                <a href="https://github.com/GraceFT/User-Testing2"><button class="btn"> <i class="fa fa-github"></i></button></a>
                                </div>
                             </div> 
                         </div> 
@@ -171,8 +171,8 @@
                             <div class="info_enlace">
                                <div>
                                 <h3>Lyft</h3>
-                                <button class="btn"> <a href="https://graceft.github.io/lyft/">View</a></button>
-                                <button class="btn"> <a href="https://github.com/GraceFT/lyft"><i class="fa fa-github"></i></a></button>
+                                <a href="https://graceft.github.io/lyft/"><button class="btn">View</button></a>
+                                <a href="https://github.com/GraceFT/lyft"><button class="btn"><i class="fa fa-github"></i></button></a>
                                 </div>
                             </div> 
                         </div>
@@ -183,19 +183,19 @@
                             <div class="info_enlace">
                                 <div>
                                     <h3>Gato Loco</h3>
-                                    <button class="btn"> <a href="https://graceft.github.io/gato-loco/">View</a></button>
-                                    <button class="btn"> <a href="https://github.com/GraceFT/gato-loco"><i class="fa fa-github"></i></a></button>
+                                    <a href="https://graceft.github.io/gato-loco/"><button class="btn">View</button></a>
+                                    <a href="https://github.com/GraceFT/gato-loco"><button class="btn"><i class="fa fa-github"></i></button></a>
                                 </div>
                                 
                             </div>
                         </div>
                         <div class="img_projects">
-                            <img src="images/port-grace4.png" alt="" class="img-responsive">
+                            <img src="images/flowers.png" alt="" class="img-responsive">
                             <div class="info_enlace">
                                 <div>
-                                    <h3>Portafolio</h3>
-                                    <button class="btn"> <a href="https://graceft.github.io/MiPortafolio/">View</a></button>
-                                    <button class="btn"> <a href="https://github.com/GraceFT/MiPortafolio"><i class="fa fa-github"></i></a></button>    
+                                    <h3>Spring Came</h3>
+                                    <a href="https://graceft.github.io/MiPortafolio/"><button class="btn">View</button></a>
+                                    <a href="https://graceft.github.io/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="js/validating.js"></script>
+<!--<script src="js/validating.js"></script>-->
 <script src="js/jquery.js"></script>  
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script> 
