adding button cv, links generate new window

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a id="btn_initial" class="name"><h3>G.C</h3></a>
+                <a id="btn_initial" class="name"><h3>GC</h3></a>
             </div>
             <div class="navbar-collapse collapse nav_grace" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
@@ -41,9 +41,9 @@
 <canvas id="canvas"></canvas>
 <!----------------HOME--------------------------------------------------->
 <section id="welcome view-start initial" class="visible  welcome">
-    <div class="img_content">
+    <!--<div class="img_content">
         <img src="images/logo2.png" alt="" class="logo_central">
-    </div>
+    </div>-->
 	<div class="content">
 	<div class="img"></div>
 		<div class="container">
@@ -74,6 +74,9 @@
                     <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovación de páginas web.
                     Además del desarrollo frontend, me encantaría participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
                     </p>
+                    <div class="text-center cv_grace">
+                        <a target="_blank" href="https://drive.google.com/file/d/0BxpvOLxdlknxVXptLUdTcm1USDVsRTJNRnllelYtN1RpNUpZ/view?usp=sharing"><button class="btn">Descarga mi CV</button></a>
+                    </div>
                     <!------------LIKES------------->    
                     <div class="text-center likes_about_me">
                         <ul class="list-inline list-unstyled">
@@ -93,7 +96,7 @@
             </div>
             <div class="row -info text-center">
                 <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                          <img src="images/escogidas/photo1.JPG" alt="" class="img-responsive" stye="width:50%; height:100%">
+                    <img src="images/escogidas/photo1.JPG" alt="" class="img-responsive" stye="width:50%; height:100%">
                 </div>
             </div>   
         </div>
@@ -161,8 +164,8 @@
                             <div class="info_enlace">
                                <div>
                                    <h3>User Testing</h3>
-                                <a href="https://graceft.github.io/User-Testing2/"><button class="btn">View</button></a>
-                                <a href="https://github.com/GraceFT/User-Testing2"><button class="btn"> <i class="fa fa-github"></i></button></a>
+                                <a target="_blank" href="https://graceft.github.io/User-Testing2/"><button class="btn">View</button></a>
+                                <a target="_blank" href="https://github.com/GraceFT/User-Testing2"><button class="btn"> <i class="fa fa-github"></i></button></a>
                                </div>
                             </div> 
                         </div> 
@@ -171,8 +174,8 @@
                             <div class="info_enlace">
                                <div>
                                 <h3>Lyft</h3>
-                                <a href="https://graceft.github.io/lyft/"><button class="btn">View</button></a>
-                                <a href="https://github.com/GraceFT/lyft"><button class="btn"><i class="fa fa-github"></i></button></a>
+                                <a target="_blank" href="https://graceft.github.io/lyft/"><button class="btn">View</button></a>
+                                <a target="_blank" href="https://github.com/GraceFT/lyft"><button class="btn"><i class="fa fa-github"></i></button></a>
                                 </div>
                             </div> 
                         </div>
@@ -183,8 +186,8 @@
                             <div class="info_enlace">
                                 <div>
                                     <h3>Gato Loco</h3>
-                                    <a href="https://graceft.github.io/gato-loco/"><button class="btn">View</button></a>
-                                    <a href="https://github.com/GraceFT/gato-loco"><button class="btn"><i class="fa fa-github"></i></button></a>
+                                    <a target="_blank" href="https://graceft.github.io/gato-loco/"><button class="btn">View</button></a>
+                                    <a target="_blank" href="https://github.com/GraceFT/gato-loco"><button class="btn"><i class="fa fa-github"></i></button></a>
                                 </div>
                                 
                             </div>
@@ -194,8 +197,8 @@
                             <div class="info_enlace">
                                 <div>
                                     <h3>Spring Came</h3>
-                                    <a href="https://graceft.github.io/MiPortafolio/"><button class="btn">View</button></a>
-                                    <a href="https://graceft.github.io/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
+                                    <a target="_blank" href="https://graceft.github.io/MiPortafolio/"><button class="btn">View</button></a>
+                                    <a target="_blank" href="https://graceft.github.io/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
                                 </div>
                             </div>
                         </div>
@@ -219,7 +222,7 @@
                             <ul class="list-unstyled list-inline ">
                                 <li><a href="https://www.linkedin.com/in/grace-clavijo-torres-0403784a/"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a href="https://github.com/GraceFT"><i class="fa fa-github"></i></a></li>
-                                <li><a href=""><i class="fa fa-twitch"></i></a></li>
+                                
                             </ul>
                         </div>  
                         <!-------------FORM----------------->
@@ -252,7 +255,7 @@
             </div>
             <div class="row text-center contact_phrase">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                        <p>“Vivo cada dia de mi vida <p> 
+                        <p>“Vivo cada día de mi vida <p> 
                         <p>como si fuera el último, </p>
                         <p> y aprendo <p>
                         <p>como si fuese a vivir</p> 
