--- a/index.html
+++ b/index.html
@@ -227,28 +227,28 @@
                         </div>  
                         <!-------------FORM----------------->
                         <p class="animated fadeInLeft">Enviame un mensaje!</p>
-                        <form class="form-horizontal animated fadeInRight">
+                        <form class="form-horizontal animated fadeInRight" action="enviar.php" method="post">
                             <div class="form-group">
                                 <label class="col-sm-2 col-xs-2 control-label">Nombre</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <input type="name" class="form-control" id="name" placeholder="Nombre">
-                                    <span id="avise"></span>
+                                    <input type="text" class="form-control" id="name_user" placeholder="Nombre" name="nombre" required>
                                 </div>
+                                <div id="avisename"></div>
                             </div>
                             <div class="form-group">
                                 <label  class="col-sm-2 col-xs-2 control-label">Email</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <input type="email" class="form-control" id="email" placeholder="Email">
+                                    <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
                                 </div>
-                                <span id="avisemail"></span>
+                                <div id="avisemail"></div>
                             </div>
                             <div class="form-group">
                                 <label  class="col-sm-2 col-xs-2 control-label">Mensaje</label>
                                 <div class="col-sm-10 col-xs-12">
-                                    <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
+                                    <textarea class="form-control" rows="3" placeholder="Mensaje" name="mensaje" required></textarea>
                                 </div>
                             </div>
-                            <button class="btn" id="btn_send">Enviar</button>
+                            <button class="btn" id="btn_send" type="submit">Enviar</button>
                         </form> 
                     </div>
                 </div> 
@@ -272,11 +272,12 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<!--<script src="js/validating.js"></script>-->
+<script src="js/jquery-3.1.1.min.js"></script>
+<!-- <script src="js/validating.js"></script>-->
 <script src="js/jquery.js"></script>  
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script> 
-    <script src="js/milkyway.js"></script>  
+    <script src="js/milkyway.js"></script> 
 </body>
 </html>
 
