adding change contact and projects

--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
 		<div class="container-fluid">
              <div class="row text-center -projects">
                 <h2 class="animated fadeInLeft">MisTrabajos</h2>
-                    <hr class="linea_projects">
                     <div class="col-md-6 col-sm-6 col-xs-12 text-center">
                         <div class="img_projects">
                             <img src="images/User2.png" alt="" class="img-responsive">
@@ -218,7 +217,7 @@
                             <ul class="list-unstyled list-inline ">
                                 <li><a target="_blank" href="https://www.linkedin.com/in/grace-clavijo-torres-0403784a/"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a target="_blank" href="https://github.com/GraceFT"><i class="fa fa-github"></i></a></li>
-                                <li><a target="_blank" href="mailto:gracefctorres@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
+                                <li><a href="mailto:gracefctorres@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
                                 
                             </ul>
                             <div class="text-center cv_grace">
