change link spring came

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
                     <p class="animated fadeInLeft" style="color:rgb(0,220,183);font-weight:bold;font-size:16px;">¿Qué me interesa?</p>
                     <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovación de páginas web.
-                    Además del desarrollo frontend, me encantaría participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
+                    Además del desarrollo front-end, me encantaría participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
                     </p>
                     <!------------LIKES------------->    
                     <div class="text-center likes_about_me">
@@ -192,8 +192,8 @@
                             <div class="info_enlace">
                                 <div>
                                     <h3>Spring Came</h3>
-                                    <a target="_blank" href="https://graceft.github.io/MiPortafolio/"><button class="btn">View</button></a>
-                                    <a target="_blank" href="https://graceft.github.io/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
+                                    <a target="_blank" href="https://graceft.github.io/Responsive-Blog/"><button class="btn">View</button></a>
+                                    <a target="_blank" href="https://graceft.com/GraceFT/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
                                 </div>
                             </div>
                         </div>
@@ -240,7 +240,6 @@
 		</div>
 	</div>
 </section>
-
 <!----------------------SCRIPT-------------------------------->
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
