change link responsive blog

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <div>
                                     <h3>Spring Came</h3>
                                     <a target="_blank" href="https://graceft.github.io/Responsive-Blog/"><button class="btn">View</button></a>
-                                    <a target="_blank" href="https://graceft.com/GraceFT/Responsive-Blog/"><button class="btn"><i class="fa fa-github"></i></button></a>    
+                                    <a target="_blank" href="https://github.com/GraceFT/Responsive-Blog"><button class="btn"><i class="fa fa-github"></i></button></a>    
                                 </div>
                             </div>
                         </div>
