adding link lyft

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                             <div class="info_enlace">
                                <div>
                                 <h3>Lyft</h3>
-                                <a target="_blank" href="https://graceft.github.io/lyft/"><button class="btn">View</button></a>
-                                <a target="_blank" href="https://github.com/GraceFT/lyft"><button class="btn"><i class="fa fa-github"></i></button></a>
+                                <a target="_blank" href="https://graceft.github.io/Lyft-JQuery/index.html"><button class="btn">View</button></a>
+                                <a target="_blank" href="https://github.com/GraceFT/Lyft-JQuery/tree/master"><button class="btn"><i class="fa fa-github"></i></button></a>
                                 </div>
                             </div> 
                         </div>
