--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 
                             </ul>
                             <div class="text-center cv_grace">
-                                <a target="_blank" href="https://drive.google.com/file/d/1BtUEBLuBaQ5NS_3Tje8f_s0XmVxY9coo/view"><button class="btn">Descarga mi CV</button></a>
+                                <a target="_blank" href="docs/CV-GRAEC-TARJETA.pdf"><button class="btn">Descarga mi CV</button></a>
                             </div>
                              
                         </div>  
