adding changes portfolio

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
                     <h2 class="animated fadeInLeft"> Sobre  Mí</h2>    
                     <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
+                    <p>Pude desarrollarme en Lima como Frontend Developer, participando de proyectos y en el desarrollo de plataformas para la facilitacion de procesos de facturacion entre empresas</p>
                     <p class="animated fadeInLeft" style="color:rgb(0,220,183);font-weight:bold;font-size:16px;">¿Qué me interesa?</p>
                     <p class="animated fadeInLeft">Poder desarrollarme y especializarme en UI, UX, estar a la vanguardia de cada paso en experiencia al usuario y en la innovación de páginas web.
                     Además del desarrollo front-end, me encantaría participar en proyectos sobre desarrollo de videojuegos, quiero ser participe del crecimiento de esta industria en mi país. 
